add home index html

--- a/VendorOrder/Views/Home/Index.cshtml
+++ b/VendorOrder/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1>Welcome to the Vendor Order Tracker</h1>
-<h3><a href='/vendor'>View Vendors</a></h3>
-<h3><a href='/vendor/new'>Add a new Vendor</a></h3>
+<h3><a href='/vendors'>View Vendors</a></h3>
+<h3><a href='/vendors/new'>Add a new Vendor</a></h3>
   </body>
 </html>
